--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ jupyter = "*"
 pandas = "*"
 requests = "*"
 uszipcode = "*"
+dash-dangerously-set-inner-html = "*"
 
 [requires]
 python_version = "3.7"
