details on click working

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pandas = "*"
 requests = "*"
 uszipcode = "*"
 dash-dangerously-set-inner-html = "*"
+timezonefinder = "*"
 
 [requires]
 python_version = "3.7"
